<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.app.RechercheFragment"
    android:background="@color/vert2">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/marron0_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoAppConnection"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/logo_api_commercepng" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/rechercheSearchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/saisie_marron"/>

<!--            <com.google.android.material.search.SearchBar-->
<!--                android:id="@+id/search_bar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:background="@drawable/saisie_marron"-->
<!--                android:gravity="center_vertical"-->
<!--                android:hint="Rechercher"-->
<!--                app:backgroundTint="@color/marron2" />-->

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/layoutFilters"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/semi_round_marron1_background"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chipTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/filtres"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/marron0"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="10dp"
                />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:foregroundGravity="center"
                    android:orientation="horizontal"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_legume"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/legume" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_fruit"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/fruit" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_viande"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/viande" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_poisson"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/poisson" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_miel"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/miel" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_autre"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/autres" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/marron0"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutFilters"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        android:fillViewport="true">

<!--    <LinearLayout-->
<!--        android:id="@+id/produitRechercheLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:background="@color/vert1">-->
<!--    </LinearLayout>-->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reclycleView_produit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">



        </androidx.recyclerview.widget.RecyclerView>



    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>