<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.app.ProfileFragment"
    android:background="@color/vert2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/monProfilLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/marron0_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoAppCommande"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/logo_api_commercepng" />

            <TextView
                android:id="@+id/monProfilTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="left|center_vertical"
                android:text="@string/mon_profil"
                android:textColor="@color/noirText"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/monProfilLayout2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/semi_round_marron1_background"
        app:layout_constraintTop_toBottomOf="@+id/monProfilLayout">

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monProfilLayout2">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="75dp"
                    android:layout_marginLeft="70dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/userPicture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/modifierProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="top"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/modify"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/profilNomTitre"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/noirText"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/nom">
            </TextView>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bouton_vert1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/profilNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="">
                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/profifPrenomTitre"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/noirText"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/prenom">
            </TextView>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bouton_vert1">

                <TextView
                    android:id="@+id/profilPrenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"

                    android:text="">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/profilMailTitre"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/noirText"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/email">
            </TextView>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bouton_vert1">

                <TextView
                    android:id="@+id/profilEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"

                    android:text="">

                </TextView>

            </LinearLayout>


            <TextView
                android:id="@+id/profilAdresseTitre"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/noirText"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/adresse">
            </TextView>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bouton_vert1">

                <TextView
                    android:id="@+id/profilAdresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"

                    android:text="">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/profilTelTitre"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/noirText"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/telephone">
            </TextView>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bouton_vert1">

                <TextView
                    android:id="@+id/profilTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"

                    android:text="">

                </TextView>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deconnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/bouton_rouge"
                android:shadowColor="#474646"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/deconnexion"
                android:textColor="@color/white"
                android:textSize="25sp"/>



        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>