<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/produit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/statusCommandeColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/vert1"
            android:orientation="horizontal">


            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/commande_id_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/commande_n"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintStart_toStartOf="parent" />


                        <TextView
                            android:id="@+id/commande_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintStart_toStartOf="parent" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/commande_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--                <com.google.android.material.divider.MaterialDivider-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="2dp"-->
                <!--                    android:layout_marginBottom="2dp"-->
                <!--                    app:dividerColor="@color/vert0"/>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/commande_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_de_la_commande"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/commande_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="dd-mm-yyyy" />

                </LinearLayout>

                <TextView
                    android:id="@+id/produit_producteur_commande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="email@producteur"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/commande_quantite_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/produits_achetes"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/commande_quantite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="0" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>